Closed Bug 1590232 Opened 6 years ago Closed 3 years ago

missing header in dom/ipc/DocShellMessageUtils.h

Categories

(Core :: DOM: Content Processes, defect, P5)

defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox106 --- fixed

People

(Reporter: CuveeHsu, Assigned: aiunusov)

Details

(Keywords: good-first-bug)

Attachments

(1 file)

We need #include "mozilla/ipc/IPDLParamTraits.h"

The priority flag is not set for this bug.
:jimm, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jmathies)

I would like to be assigned to this bug.

Assignee: nobody → klypat00

Thanks Kayla. Happy hacking.

Flags: needinfo?(jmathies)
Priority: -- → P5

Hi, I would like to help out with this bug!

Thanks.

This good-first-bug hasn't had any activity for 6 months, it is automatically unassigned.
For more information, please visit auto_nag documentation.

Assignee: klypat00 → nobody

Hey Neha Kochar [:neha],
My name is Jane and I am Outreachy applicant. Could I please be assigned for this task?
Kind regards

To anyone interested: Note that submitting a patch will automatically assign you! No need to poke anyone 😉

Severity: normal → S4
Assignee: nobody → aiunusov
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: